# llmcostcut

./: .gitignore  INSTALL.md  LLMCostCut.mov  MANIFEST.in  QUICKSTART.md  README-zh.md  README.md  README_PACKAGE.md  __init__.py  buffers.py  correctness.py  defaults.py  example_usage.py  models.py  monitor.py  monitor_async_nonblock.py  pyproject.toml  registry.py  requirements.txt  setup.py  task.py  test_installation.py  trainer.py
examples/: agnews_gcp.py  example.py  usage.py
llmcompiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llmcompiler/: buffers.py  correctness.py  defaults.py  models.py  monitor.py  selector.py  task.py  trainer.py
src/llmcostcut/: __init__.py  buffers.py  correctness.py  defaults.py  models.py  monitor.py  registry.py  task.py  trainer.py
src/outputs/: agnews_gcp.err
