[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcompiler"
version = "0.1.0"
description = "A framework for selectively invoking LLMs and distilling repeated workloads into smaller models"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Liang Zhao", email = "liang.zhao@emory.edu"},
    {name = "LLMCompiler Team", email = "liang.zhao@emory.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "llm",
    "distillation",
    "knowledge-distillation",
    "online-learning",
    "adaptive-inference",
    "machine-learning",
]
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/emory-llmcompiler/llmcompiler"
Documentation = "https://github.com/emory-llmcompiler/llmcompiler#readme"
Repository = "https://github.com/emory-llmcompiler/llmcompiler"
Issues = "https://github.com/emory-llmcompiler/llmcompiler/issues"

[tool.setuptools]
packages = ["llmcompiler"]
package-dir = {"llmcompiler" = "."}

[tool.setuptools.package-data]
llmcompiler = ["LICENSE", "README.md", "QUICKSTART.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

